--- a/dev-manifest.yaml
+++ b/dev-manifest.yaml
@@ -8,7 +8,7 @@ kind: Deployment
 # Metadata is information related to the object we created in Kubernetes
 metadata:
 # The name here is the name of our deployment  
-  name: dev-stedi-sean
+  name: dev-stedi-mike
 spec:
 # Replicas refers to the number of pods we deploy
   replicas: 1
@@ -17,29 +17,29 @@ spec:
 # Matchlabels are a label for my selector  
     matchLabels:
 # App is a specific kind of label for my pod
-      app: dev-stedi-sean
+      app: dev-stedi-mike
 # The Template describes all the features of my pod
   template:
 # The metadata provides labels for my template  
     metadata:
       labels:
-        app: dev-stedi-sean
+        app: dev-stedi-mike
 # The spec refers to the specification of my containers in my pod        
     spec:
 # Containers can have one or more Docker containers in the pod
       containers:
 # The name of the container is specified below      
-        - name: dev-stedi-sean
+        - name: dev-stedi-mike
 # The image is a prebuilt file containing the operating system        
-          image: us-docker.pkg.dev/my-devops-team/sean-api/stedi-api:latest # IMAGE NEEDS TO BE ARTIFACT REGISTRY NEW REPOSITORY
+          image: us-docker.pkg.dev/w09-scrum-team-cit-262/mike-api/stedi-api:latest # IMAGE NEEDS TO BE ARTIFACT REGISTRY NEW REPOSITORY
           env:
             - name: REDIS_PASSWORD
               valueFrom:
                 secretKeyRef:
-                  name: redis-secrets-sean
+                  name: redis-secrets-mike
                   key: REDIS_PASS
             - name: REDIS_HOST
-              value: "redis-stedi-sean"
+              value: "redis-stedi-mike"
             - name: REDIS_PORT
               value: "6379"
             - name: REDIS_DB
@@ -49,8 +49,8 @@ spec:
             - name: TWILIO_AUTH_TOKEN
               valueFrom:
                 secretKeyRef:
-                  name: sean-twilio-dev
-                  key: twilio_token
+                  name: team-twilio-dev
+                  key: a3b6a715-24da-4152-b907-57d4189c215c
 # The ports is a list of tcp ports the pod listens on
           ports:
 # ContainerPort is a specific port the pod listens on
@@ -85,10 +85,10 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: dev-stedi-sean-loadbalancer
+  name: dev-stedi-mike-loadbalancer
 spec:
   selector:
-    app: dev-stedi-sean
+    app: dev-stedi-mike
   type: LoadBalancer
   ports:
     - port: 80
